fix ajax, fix the single 1 that was too small ++ update opengraph image to temporary domain

--- a/public/index.css
+++ b/public/index.css
@@ -34,6 +34,11 @@ h2 {
     margin: 0;
 }
 
+.one {
+    font-size: 1.4em;
+    font-weight: 100;
+}
+
 a {
     width: fit-content;
     margin: auto;
